--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "componets/cta";
 @import "componets/card";
 @import "componets/testimonial-item";
+@import "componets/multi-carousel";
 
 @import "layout/footer";
 @import "layout/header";
