--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,6 @@ hr {
   border: none;
   transition: all .4s;
   padding: 2rem;
-  align-items: center;
   margin-bottom: 2rem; }
   .card:hover {
     background-color: #fff;
@@ -84,6 +83,8 @@ hr {
     .card:hover .card__btn {
       background-color: #22195B;
       color: #fff; }
+  .card__icon {
+    font-size: 3rem; }
   .card__heading {
     font-size: 2rem;
     font-weight: 700;
@@ -131,6 +132,15 @@ hr {
   background-color: #412FB3; }
   .carousel-indicators > .active:hover {
     background-color: #412FB3; }
+
+.multi-carousel {
+  height: 7rem;
+  position: relative;
+  overflow: hidden;
+  z-index: 2; }
+  .multi-carousel > * {
+    text-align: center;
+    position: absolute; }
 
 .footer {
   background-color: #0E1424;
@@ -194,6 +204,14 @@ hr {
       color: #CAC7DA; }
   .top-navbar__item > .active {
     color: #CAC7DA; }
+
+.social-list {
+  list-style: none; }
+  .social-list__link {
+    color: #fff;
+    margin: 0 2rem; }
+    .social-list__link:hover {
+      color: #CAC7DA; }
 
 .section-header {
   margin: 10rem 0;
