--- a/sass/componets/_card.scss
+++ b/sass/componets/_card.scss
@@ -3,7 +3,7 @@
   border: none;
   transition: all .4s;
   padding: 2rem;
-  align-items: center;
+  //align-items: center;
   margin-bottom: 2rem;
   &:hover{
     background-color: $color-white;
@@ -12,6 +12,9 @@
       background-color: $background-color-header;
       color: $color-white;
     }
+  }
+  &__icon{
+    font-size: $font-icon-size;
   }
   &__heading{
     font-size: $font-size-card-header;
